if(MATIO_LIB_FILE AND HDF5_LIB_FILE AND MATIO_INC_DIR)
	file(GLOB CPP_FILES "*.cpp")
	include_directories(${FAUST_MATRIX_SRC_DIR} ${FAUST_EIGEN_SRC_DIR} ${FAUST_FAUSTCORE_SRC_DIR} ${FAUST_PALM4MSA_SRC_DIR} ${FAUST_EXCEPTION_SRC_DIR} ${FAUST_MATIO_SRC_DIR} ${MATIO_INC_DIR})

	#add_library(${FAUST_MATIO_TARGET} SHARED ${CPP_FILES})
	add_library(${FAUST_MATIO_TARGET} STATIC ${CPP_FILES})
	#target_link_libraries(${FAUST_MATIO_TARGET}  )
endif()
