
#INCLUDE("${PROJECT_SOURCE_DIR}/CMake/define_variables.cmake")


file(GLOB CPP_MEXTOOLS_FILES "${FAUST_MEXINTERFACETOOLS_SRC_DIR}/*.cpp")
include_directories(${FAUST_MATRIX_SRC_DIR} ${FAUST_PALM4MSA_SRC_DIR} ${FAUST_MEXINTERFACETOOLS_SRC_DIR} ${MATLAB_INCLUDE_DIR} ${FAUST_EIGEN_SRC_DIR})
add_library(${FAUST_MEXTOOLS_TARGET} SHARED ${CPP_MEXTOOLS_FILES})
target_link_libraries(${FAUST_MEXTOOLS_TARGET} ${FAUST_FAUSTCORE_TARGET} ${FAUST_PALM4MSA_TARGET})


file(GLOB CPP_MEX_FILES "${FAUST_MEXINTERFACEMEX_SRC_DIR}/*.cpp")
string(REGEX REPLACE "[a-zA-Z0-9_/]+/([a-zA-Z0-9_]+)\\.cpp(;|$)" "\\1\\2" MEXFILE_TARGET_LIST "${CPP_MEX_FILES}")

add_custom_target(${FAUST_MEX_TARGET} ALL DEPENDS ${MEXFILE_TARGET_LIST}  )

string(STRIP ${CMAKE_CXX_FLAGS} CMAKE_CXX_FLAGS)
string(REGEX REPLACE "([ \n\r\t]+)" ";" CMAKE_CXX_FLAGS_LIST "${CMAKE_CXX_FLAGS}")

foreach(mex_target ${MEXFILE_TARGET_LIST})

	add_custom_target(${mex_target} ALL DEPENDS ${FAUST_MEXINTERFACEMEX_SRC_DIR}/${mex_target}.cpp ${mex_target}.${MEX_EXT} ${FAUST_MEXTOOLS_TARGET} )

	add_custom_command(OUTPUT ${mex_target}.${MEX_EXT}
#	COMMAND   ${MATLAB_ROOT}/bin/mex 
#	ARGS -O "${FAUST_COMPILE_SINGLE_FLAG}"
#	-I${MATLAB_INCLUDE_DIR} -I${FAUST_EIGEN_SRC_DIR} -I${FAUST_MATRIX_SRC_DIR} -I${FAUST_PALM4MSA_SRC_DIR} -I${FAUST_FAUSTCORE_SRC_DIR} -I${FAUST_MEXINTERFACEMEX_SRC_DIR} -I${FAUST_MEXINTERFACE_SRC_DIR} -I${FAUST_MEXINTERFACETOOLS_SRC_DIR} 
#	${FAUST_MEXINTERFACEMEX_SRC_DIR}/${mex_target}.cpp  
#	"-L${FAUST_FAUSTCORE_BIN_DIR}" "-L${FAUST_MATRIX_BIN_DIR}" "-L${FAUST_PALM4MSA_BIN_DIR}" "-L${FAUST_MEXINTERFACE_BIN_DIR}" "-L${FAUST_EXCEPTION_BIN_DIR}" "-L${MATLAB_ROOT}/bin/glnxa64"
#	"-l${FAUST_FAUSTCORE_TARGET}" "-l${FAUST_MATRIX_TARGET}" "-l${FAUST_PALM4MSA_TARGET}" "-l${FAUST_MEXTOOLS_TARGET}" "-l${FAUST_EXCEPTION_TARGET}" "-lmx" "-lmex" "-lmat"
#   COMMENT   "Creating mex function ${mex_target}.${MEX_EXT}")

		

		COMMAND ${CMAKE_CXX_COMPILER} 
		ARGS "-c" ${CMAKE_CXX_FLAGS_LIST} "-DNDEBUG -DMATLAB_MEX_FILE" 
		"${FAUST_MEXINTERFACEMEX_SRC_DIR}/${mex_target}.cpp"
		"-I${MATLAB_INCLUDE_DIR}" 
		"-I${FAUST_EIGEN_SRC_DIR}" 
		"-I${FAUST_MATRIX_SRC_DIR}" 
		"-I${FAUST_PALM4MSA_SRC_DIR}" 
		"-I${FAUST_FAUSTCORE_SRC_DIR}" 
		"-I${FAUST_MEXINTERFACEMEX_SRC_DIR}" 
		"-I${FAUST_MEXINTERFACE_SRC_DIR}" 
		"-I${FAUST_MEXINTERFACETOOLS_SRC_DIR}"
		"-o" "${FAUST_MEXINTERFACEMEX_SRC_DIR}/${mex_target}.o"
        	COMMAND ${CMAKE_CXX_COMPILER} 
		ARGS "-pthread" "-Wl,--no-undefined" "-fPIC" "-shared" "-O3" "-Wl,--version-script,${MATLAB_ROOT}/extern/lib/glnxa64/mexFunction.map" 
		"${FAUST_MEXINTERFACEMEX_SRC_DIR}/${mex_target}.o"
		"-lstdc++" "-lm"
		"-L${FAUST_FAUSTCORE_BIN_DIR}" "-l${FAUST_FAUSTCORE_TARGET}"
		"-L${FAUST_MATRIX_BIN_DIR}" "-l${FAUST_MATRIX_TARGET}"
		"-L${FAUST_PALM4MSA_BIN_DIR}" "-l${FAUST_PALM4MSA_TARGET}"
		"-L${FAUST_EXCEPTION_BIN_DIR}" "-l${FAUST_EXCEPTION_TARGET}"
		"-L${FAUST_MEXINTERFACE_BIN_DIR}" "-l${FAUST_MEXTOOLS_TARGET}"
		"-L${MATLAB_ROOT}/bin/glnxa64" "-lmx" "-lmex" "-lmat"	
		"-Wl,-rpath=${FAUST_FAUSTCORE_BIN_DIR}:${FAUST_MATRIX_BIN_DIR}:${FAUST_PALM4MSA_BIN_DIR}:${FAUST_MEXINTERFACE_BIN_DIR}"
		"-o" "${mex_target}.${MEX_EXT}"
		COMMAND rm
		ARGS -f ${FAUST_MEXINTERFACEMEX_SRC_DIR}/${mex_target}.o
		COMMENT "Creating mex function ${mex_target}.${MEX_EXT}"
		VERBATIM)

endforeach()

