#INCLUDE("${PROJECT_SOURCE_DIR}/CMake/define_variables.cmake")
file(GLOB CPP_FILES "*.cpp")

if(UNIX AND FAUST_USE_MKL)
	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fopenmp")
elseif(WIN32 AND FAUST_USE_MKL)
	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /openmp")
endif()
include_directories( ${FAUST_EXCEPTION_SRC_DIR} ${FAUST_EIGEN_SRC_DIR})
if(FAUST_USE_OPENBLAS)
	include_directories( ${OPENBLAS_INC_DIR})
	add_definitions(-D__GEMM_WITH_OPENBLAS__ )
endif()

if(FAUST_USE_MKL)
	include_directories( ${MKL_INC_DIR})
	message(STATUS " matrix MKL_INC_DIR ${MKL_INC_DIR}")
endif()
#message(STATUS "AAAAAAAAAAAAAAAAAAAAAAAAAAAA")
add_library(${FAUST_MATRIX_TARGET} OBJECT ${CPP_FILES})

if(FAUST_USE_OPENBLAS)
	#target_link_libraries(${FAUST_MATRIX_TARGET} ${FAUST_EXCEPTION_TARGET} ${OPENBLAS_LIB_FILE})
else()
	#target_link_libraries(${FAUST_MATRIX_TARGET} ${FAUST_EXCEPTION_TARGET})
endif()
