#INCLUDE("${PROJECT_SOURCE_DIR}/CMake/define_variables.cmake")
set(SRC_FILES "")
file(GLOB CPP_FILES "*.cpp")


include_directories(${FAUST_MATRIX_SRC_DIR} ${FAUST_FAUSTCORE_SRC_DIR} ${FAUST_EXCEPTION_SRC_DIR} ${FAUST_EIGEN_SRC_DIR})
add_library(${FAUST_PALM4MSA_TARGET} SHARED ${CPP_FILES})
target_link_libraries(${FAUST_PALM4MSA_TARGET} ${FAUST_MATRIX_TARGET} ${FAUST_EXCEPTION_TARGET})

